# ChangeLog for net-nntp/couchpotato
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libcec-2.0.3 (31 Oct 2012)
  31 Oct 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
  +libcec-2.0.3.ebuild, -libcec-2.0.2.ebuild
  Version bump.

*libcec-2.0.2 (16 Oct 2012)
  16 Oct 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
  +libcec-2.0.2.ebuild, -libcec-2.0.1.ebuild
  Version bump.

*libcec-2.0.1 (12 Oct 2012)
  12 Oct 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
  +libcec-2.0.1.ebuild, -libcec-2.0.0.ebuild
  Version bump.


*libcec-2.0.0 (10 Oct 2012)
  10 Oct 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
  +libcec-2.0.0.ebuild, -libcec-1.9.0.ebuild, -libcec-1.8.1-r1.ebuild
  -files/libcec-1.8.1-eintr-retry.patch.
  Version bump.

*libcec-1.9.0 (15 Sep 2012)

  15 Sep 2012; Ian Whyman <thev00d00@gentoo.org> -libcec-1.8.1.ebuild,
  +libcec-1.9.0.ebuild:
  Version bump

*libcec-1.8.1-r1 (25 Aug 2012)

  25 Aug 2012; Ian Whyman <thev00d00@gentoo.org> +libcec-1.8.1-r1.ebuild,
  +files/libcec-1.8.1-eintr-retry.patch:
  Add patch from pull request 38, fix eintr handling

*libcec-1.8.1 (08 Aug 2012)

  08 Aug 2012; Ian Whyman <thev00d00@gentoo.org> -libcec-1.7.1.ebuild,
  +libcec-1.8.1.ebuild:
  Version Bump

*libcec-1.7.1 (29 Jun 2012)

  29 Jun 2012; Ian Whyman <thev00d00@gentoo.org> -libcec-1.7.0.ebuild,
  +libcec-1.7.1.ebuild:
  Version bump

*libcec-1.7.0 (18 Jun 2012)

  18 Jun 2012; Ian Whyman <thev00d00@gentoo.org> -libcec-1.5.2.ebuild,
  -libcec-1.6.3.ebuild, +libcec-1.7.0.ebuild:
  Bump to 1.7.0, thanks to soehest for the nudge

*libcec-1.6.3 (24 May 2012)

  24 May 2012; Ian Whyman <thev00d00@gentoo.org> +libcec-1.6.3.ebuild:
  Bump to latest

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> libcec-1.6.2.ebuild:
  marked x86 per bug 415907

  14 May 2012; Agostino Sarubbo <ago@gentoo.org> libcec-1.6.2.ebuild:
  Stable for amd64, wrt bug #415907

*libcec-1.6.2 (05 May 2012)
