@@ -1,6 +1,8 @@
 DIST libcec-1.6.2.tar.gz 929364 SHA256 2d853df4478a9b93ef699c7038cf78a97741b1a594996d1df644f2d5e51d6969 SHA512 6b42c6810ebc6819e1cf1c806a25d8ca5ccc6786d4026a595e7b86336f7cb087d80e9daf464f3bbccb2fa3d009f551fdcb616d5b5ddea2d8db42b28499786dcd WHIRLPOOL 2d78ab7885a04975b7c283041a33747a09b7444bedba27f2cd3057558f255ce3a8c60766766664685c79cf4fd19b35cf7f13281c8eace605891c2948a0a1a9ce
 DIST libcec-2.0.3.tar.gz 1077395 SHA256 b6df1f4fb6f922a9f21bcb2a34b1e1fd9359d04783a16af94f74ec469506cc0b SHA512 4520896e8fb630ef7a641fc45d24c22b6423995e6c4f856229103ee93c6f856e4a51693b22ab5c88e7d07d0401695dc02103f9810289ea4663b9c11d082d1ead WHIRLPOOL 9940f09808589a6fb49383394487a7bb2bd8ed4c7cf966bcdc7e555ded213d129bd487c3c4d473d6e035de451b8273f7a6e782284bc8ee10efd3f0a2a1560a22
+DIST libcec-9999.tar.gz 1078206 SHA256 fbb0adbe9d22f505a568e76685b30c0f7639ba9332b8ee1a398e6c0cf6612e19 SHA512 df7683ebfe908b28c26ae186fbf513028bf3bf946a890daed0422ae8ee8b24eb93e8ea4fcae0ef22fc44c1ada59f41930fb0e2d59a2390ab713921c360111454 WHIRLPOOL b9b250ee86ee5c29639954e4ade595d302a816e15ac4cc932282489ac91c4109fa103e56a89546b68ecbf7a35ffa7310e2e2f4a41e5f666e8deebf3b9bd090bd
 EBUILD libcec-1.6.2.ebuild 756 SHA256 60cb572d1354191a1b551bf7f3c03dc51b0ad2da92b50d470b8035c449e372be SHA512 c84ae81dd8f788918d00aad7ded3b6605bc37a3b93a07072acb83697e104bb830a473e383465bfdb844e9f9a4f879f077dc8111fe352e24f66bc2a348f704ccd WHIRLPOOL 978004d78cd56cd7f981a63fb3f7a0b67663674506a62ba6548547c737713c3ef2b7884332c8126e9d35cfb829308efc59817c56c562f5715715a1e1d2a9c4bc
 EBUILD libcec-2.0.3.ebuild 781 SHA256 3d434cf7b4fb371a4e8246d0779fbdde625da5f090be1386c68b0edda7cd7a62 SHA512 129bf78c78f47ec8b2aa7d6694905ba8da661a694451e2aa3f555ba7486a7200a337eaa1affaa05e10f896c97db69e5abfa8d1171e193bcf282d847ad40299f9 WHIRLPOOL 17a3206ab8164f947d3b0a935de6108cce8b0970b371120eb4979a43e1cf456c3654a92da62792bce9de07e705f163ecbc6f7a3945d5b8b3d8fcb889ecc60d21
+EBUILD libcec-9999.ebuild 783 SHA256 c4c47fe8d2fafce82569d4961991393e1a365b311532d8502b016a2a58869945 SHA512 275c81e9cd71fcae117af605476a93c604028783437d78b253b0439a4a36a2d382fdba226278dbd32c3649a1ddf2cd841b7880fa07dc4c5559fa02af53f925e1 WHIRLPOOL ee4f7b54706adcebe4b0b33d44ec478221848b8604c3b7fdad91c325936825b1cf8594821b2435e5af2110aaba3d938ccdbfe6e9b229f37ebbd9ac571963ec8e
 MISC ChangeLog 2705 SHA256 a04c216e181349e182deb0c1edb276abcfb0ad19fb01bb53ad07bcf1024fc2ce SHA512 ba6dd6c5952b38353624e9a12c8b90e1f6d474e5c9df71169959cd553aa95d2c5dd70a61c7d4e3c4c437fef5e97cbf839a530e5ded48a79cdfc2d0da052c8fe9 WHIRLPOOL 23c4b34acf38b76e62faa1f5b2eeb757ec344374f0b5547636143eea7f8379b3aac7471c21c57805ca00fa222f4b91c5635f79f6041373494377c89b0149b97a
 MISC metadata.xml 232 SHA256 3e0886d31df5e2b8735dfa995ed12280c69f959a90a4e9d54bafd527110282a3 SHA512 ffd6f191fa1e2510e4c12c4b6c0b2240f188577b38b6b4ca297be5dd4424b352b24b6ff5ceccd06c0b2fcf55b2a372980bf8b980e2915334ba820ebdcdc149d8 WHIRLPOOL 47858cf96e435c48f17bc5abc285679acfcc01927852d6809a02c7610b16b81b145f23673070e1f3ae7354dd3876f882f6f00e2ba7320f50150b5c13f140e75b
